2021-04-29 Jan Kotanski <jankotan@gmail.com>
	* add selection of column headers in nxsconfig describe
	* fix nxsparser when no link target defined
	* tagged as v3.6.0

2021-04-28 Jan Kotanski <jankotan@gmail.com>
	* add detector livedata component template
	* tagged as v3.5.0

2021-04-22 Jan Kotanski <jankotan@gmail.com>
	* fix file number in the dalsa component link
	* tagged as v3.4.1

2021-04-19 Jan Kotanski <jankotan@gmail.com>
	* add --type option to nxscreate onlinecp
	* add --device --port --host options to nxscreate onlinecp
	* add lambdavds component
	* tagged as v3.4.0

2021-04-16 Jan Kotanski <jankotan@gmail.com>
	* add checks for duplicated sardana names
	* add dalsa template component
	* fix instrument group names of nexus paths to external links
	* add missing --dtype to 'nxscollect vds' examples
	* tagged as v3.3.0

2021-04-07 Jan Kotanski <jankotan@gmail.com>
	* add support got h5py >= 3.0.0
	* add nxscollect vds command line tool
	* tagged as v3.2.0

2021-02-25 Jan Kotanski <jankotan@gmail.com>
	* avoid caching tango.Except and tango.DevError
	* add waitforproc parameter for waitServer[Not]Running()
	* tagged as v3.1.1

2021-02-22 Jan Kotanski <jankotan@gmail.com>
	* HDF5_version changed to HDF5_Version
	* NeXus_version removed
	* qbpm template used with NXmonitor group
	* adds VDS implementation in h5 filewriters
	* call open() with with
	* tagged as v3.1.0

2021-02-12 Jan Kotanski <jankotan@gmail.com>
	* h5pywriter.shape returns () for SCALAR attributes
	* tagged as v3.0.1

2021-02-12 Jan Kotanski <jankotan@gmail.com>
	* store strings as SCALAR by default
	* remove support for pni
	* h5*writer.shape returns () for SCALAR fields
	* tagged as v3.0.0

2021-02-03 Jan Kotanski <jankotan@gmail.com>
	* impove tangovimba component
	* change '_' to '-' in command-line options settings
	* tagged as v2.74.0

2021-01-28 Jan Kotanski <jankotan@gmail.com>
	* add support for VDS
	* add fix slide2selection
	* tagged as v2.73.0
